# lwlyricfinder

./: .gitignore  README.md  pyproject.toml
lwlyricfinder/: __init__.py  __main__.py  cli.py  core.py
lwlyricfinder/core/: exceptions.py  find.py  lyrics.py  patterns.py  song.py  utils.py
lwlyricfinder/tests/: conftest.py  response.json  test_utils.py
