[project]
name = "lwlyricfinder"
version = "0.1.0"
description = "A CLI tool which scrapes https://loveworldlyrics.com/ for song lyrics, and copies them to clipboard."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "pyperclip>=1.9.0",
    "regex>=2024.11.6",
    "selectolax>=0.3.28",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "nuitka>=2.6.8",
]
